gccida/g3/true_regnum
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2891:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v1.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2899:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v1.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2901:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2909:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v1.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2913:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v1.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2915:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2930:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v2 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2932:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v1.rtwint + 2)) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2956:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v3 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2958:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v2 + 2)) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2982:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v4 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:2984:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v3 + 2)) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:3001:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( *( _QWORD *)( v4 + 8) + 2LL), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/jump.c:3003:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v4 + 2)) 
  ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/true_regnum/src/obj/jump.o] Error 1
